Fix outline close arrow being hidden by last commit

--- a/zen-mode.css
+++ b/zen-mode.css
@@ -208,7 +208,7 @@ Issues:
 .zen-mode .left-sidebar-container {
     top: 0 !important;
     height: 100% !important;
-/*     overflow: hidden; */
+    overflow: visible;
     z-index: 501;
 }
 
